--- a/trab/templates/patrimonio/comprar_patrimonio.html
+++ b/trab/templates/patrimonio/comprar_patrimonio.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 <div class="container mt-5">
-    <h2 class="mb-4 text-center">{{ titulo or 'Cadastro de Bem Patrimonial' }}</h2>
+    <h2 class="mb-4 text-center">{{ titulo or 'Compra de Bem Patrimonial' }}</h2>
     
     <form method="POST" action="">
         {{ form.hidden_tag() }}
@@ -27,13 +27,6 @@
                 {{ form.data_aquisicao(class="form-control", type="date") }}
             </div>
         </div>
-
-        {% if 'Editar' in titulo %}
-            <div class="mb-3">
-                {{ form.status.label(class="form-label") }}
-                {{ form.status(class="form-select") }}
-            </div>
-        {% endif %}
 
         <div class="d-flex justify-content-center gap-3 mt-4">
             <a href="{{ url_for('patrimonio_bp.bens') }}" class="btn btn-secondary">Cancelar</a>
