--- a/trab/templates/patrimonio/comprar_patrimonio.html
+++ b/trab/templates/patrimonio/comprar_patrimonio.html
@@ -1,8 +1,8 @@
 {% extends 'layout.html' %}
 
 {% block content %}
-<div class="container mt-5">
-    <h2 class="mb-4 text-center">{{ titulo or 'Compra de Bem Patrimonial' }}</h2>
+<div class="container mt-5" style="max-width: 800px;">
+    <h2 class="mb-4 text-center">{{ titulo or 'Registrar Compra de Bem Patrimonial' }}</h2>
     
     <form method="POST" action="">
         {{ form.hidden_tag() }}
@@ -16,15 +16,23 @@
             {{ form.descricao.label(class="form-label") }}
             {{ form.descricao(class="form-control", rows="3") }}
         </div>
-
+        
         <div class="row">
+            <div class="col-md-6 mb-3">
+                {{ form.forma_pagamento.label(class="form-label") }}
+                {{ form.forma_pagamento(class="form-select") }}
+            </div>
+
             <div class="col-md-6 mb-3">
                 {{ form.valor.label(class="form-label") }}
                 {{ form.valor(class="form-control") }}
             </div>
+        </div>
+
+        <div class="row">
             <div class="col-md-6 mb-3">
-                {{ form.data_aquisicao.label(class="form-label") }}
-                {{ form.data_aquisicao(class="form-control", type="date") }}
+                {{ form.data_compra.label(class="form-label") }}
+                {{ form.data_compra(class="form-control", type="date") }}
             </div>
         </div>
 
