--- a/trab/templates/patrimonio/comprar_patrimonio.html
+++ b/trab/templates/patrimonio/comprar_patrimonio.html
@@ -38,7 +38,7 @@
 
         <div class="d-flex justify-content-center gap-3 mt-4">
             <a href="{{ url_for('patrimonio_bp.bens') }}" class="btn btn-secondary">Cancelar</a>
-            <button type="submit" class="btn btn-primary">{{ form.submit.label.text }}</button>
+            <button type="submit" class="btn btn-success">{{ form.submit.label.text }}</button>
         </div>
     </form>
 </div>
