--- a/trab/templates/layout.html
+++ b/trab/templates/layout.html
@@ -42,6 +42,9 @@
                     <li class="nav-item">
                         <a class="nav-link" href="{{url_for('patrimonio_bp.bens')}}">Patrimônio</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="{{url_for('patrimonio_bp.bens')}}">Balanço</a>
+                    </li>
 
                     <div class="d-flex align-items-center gap-3">
                         <div class="bg-primary-subtle text-primary-emphasis p-2 rounded d-flex align-items-center gap-2">
@@ -50,7 +53,7 @@
                         </div>
                         <div class="bg-primary-subtle text-primary-emphasis p-2 rounded d-flex align-items-center gap-2">
                             <i class="bi bi-cash-coin text-primary fs-4"></i>
-                            <div style="font-weight: 500;">R$ 0,00</div>
+                            <div style="font-weight: 500;">R$ {{ "%.2f"|format(saldo_caixa or 0) }}</div>
                         </div>
                     </div>
                 </ul>
