--- a/trab/templates/patrimonio/bens.html
+++ b/trab/templates/patrimonio/bens.html
@@ -4,7 +4,7 @@
     <div class="d-flex justify-content-between align-items-center mb-4">
         <h2 class="mb-0">Gestão de Patrimônio</h2>
         <div>
-            <a href="{{ url_for('patrimonio_bp.comprar_bem') }}" class="btn btn-success">
+            <a href="{{ url_for('patrimonio_bp.comprar_bem') }}" class="btn btn-primary">
                 <i class="bi bi-cart-plus"></i> Comprar Bem
             </a>
         </div>
